<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/darker_gray"
android:orientation="vertical" >

<TextView
    android:id="@+id/info_user"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/contenuVide" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frameResult"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titreInscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="@dimen/hauteurEntreTitre"
                android:text="@string/message"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp" >

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_matricule"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/matricule" />

                    <TextView
                        android:id="@+id/tv_nom"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/esp_elements"
                        android:text="@string/nom" />

                    <TextView
                        android:id="@+id/tv_prenom"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/esp_elements"
                        android:text="@string/prenom" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/descrImage" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_matiere"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/esp_elements"
                android:text="@string/matiere" />

            <TextView
                android:id="@+id/tv_regime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/esp_elements"
                android:text="@string/regime" />

            <TextView
                android:id="@+id/tv_numTable"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/esp_elements"
                android:text="@string/numTable" />

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="@dimen/hauteurEntreTitre"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lib_nbreEtud"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/tv_nbreEtudiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nbrPlace"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>


</ScrollView>


<Button
    android:id="@+id/btn_scan"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal|center"
    android:layout_weight="0"
    android:background="@android:color/holo_blue_dark"
    android:text="Ajouter" />

</LinearLayout>
