<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_splash"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SplashActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="@dimen/hauteurEntreTitre"
        android:text="@string/activity_splash_title_line_one"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/hauteurEntreTitre"
        android:text="@string/activity_splash_title_line_two"
        android:textColor="@android:color/black"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="@dimen/hauteurEntreTitre"
        android:text="@string/iut"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/info_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="@dimen/hauteurEntreTitre"
        android:text="@string/bdjn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/activity_splash_title_line_three"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <ProgressBar
        android:id="@+id/activity_splash_progress_bar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>


